# nfs-user-server

./: .version  BUGS  BUILD  ChangeLog  HALL_OF_FAME  INSTALL  Makefile.in  NEWS  README  README.CDF  README.mm  TODO  acconfig.h  aclocal.m4  auth.c  auth.h  auth_clnt.c  auth_init.c  config.h.in  configure  configure.in  devtab.c  exports.man  extensions.h  faccess.c  faccess.h  failsafe.c  failsafe.h  fakefsuid.h  fh-dist.c  fh.c  fh.h  fsusage.c  getattr.c  haccess.c  haccess.h  install-sh  logging.c  logging.h  mkdir.c  (+51 more)
debian/: build.cfg  changelog  conffiles  control  copyright  dirs  docs  init  postinst  preinst  rules  ugidd.conffiles  ugidd.files  ugidd.init  ugidd.preinst
