dnl Process this file with autoconf to produce a configure script.
dnl Updated for autoconf 2.
dnl
AC_INIT(nfsd.c)
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
# If we're using gcc, we want warning flags
test -n "$GCC" &&
  WARNFLAGS=-Wall RPC_WARNFLAGS="-Wno-unused -Wno-switch -Wno-uninitialized"
AC_SUBST(WARNFLAGS)
AC_SUBST(RPC_WARNFLAGS)
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_RPCGEN
AC_RPCGEN_C
AC_RPCGEN_I
AC_GCC_TRADITIONAL
AC_AIX
AC_MINIX
AC_ISC_POSIX
AC_PROG_INSTALL
AC_CROSS_CHECK
AC_STDC_HEADERS
AC_GNULIBC
AC_CONST
AC_VPRINTF
AC_HEADER_DIRENT
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_STAT_MACROS_BROKEN
AC_TYPE_SIGNAL
AC_TYPE_UID_T dnl this checks both uid_t and gid_t
AC_TYPE_MODE_T
AC_TYPE_GETGROUPS
AC_XDRPROC_T
AC_UTIME_NULL
AC_MAJOR_HEADER
AC_CHECK_SIZEOF(unsigned long)
AC_CHECK_SIZEOF(unsigned short)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_TYPE(dev_t, unsigned int)
AC_CHECK_TYPE(ino_t, unsigned long)
AC_CHECK_SIZEOF(uid_t)
AC_CHECK_SIZEOF(gid_t)
AC_CHECK_SIZEOF(ino_t)
AC_CHECK_SIZEOF(dev_t)
AC_HAVE_HEADERS(unistd.h string.h memory.h fcntl.h syslog.h sys/file.h sys/time.h utime.h sys/fsuid.h)
AC_ALLOCA
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(rpc, main)
AC_CHECK_LIB(crypt, main)
AC_CHECK_LIB(nys, main)
AC_REPLACE_FUNCS(strerror realpath mkdir rename utimes strdup strstr getopt getopt_long)
AC_HAVE_FUNCS(getcwd seteuid setreuid getdtablesize setgroups lchown setsid setfsuid setfsgid innetgr quotactl authdes_getucred strsignal)
AC_AUTHDES_GETUCRED
AC_BROKEN_SETFSUID
AC_MOUNTLIST
AC_FSUSAGE
AC_LIBWRAP_BUG
AC_BSD_SIGNALS
AC_SUBST(LDFLAGS)
AC_SUBST(CFLAGS)
AC_OUTPUT(Makefile)
